# aegit-cli

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV-SETUP.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml
scripts/: local-e2e-demo.sh
src/: config.rs  main.rs  state.rs
src/commands/: id.rs  identity.rs  message.rs  mod.rs  msg.rs  relay.rs
