[package]
name = "aegit-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-proto = { path = "../aegis-core/crates/aegis-proto" }
aegis-crypto = { path = "../aegis-core/crates/aegis-crypto" }
aegis-identity = { path = "../aegis-core/crates/aegis-identity" }
aegis-api-types = { path = "../aegis-core/crates/aegis-api-types" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }
